fresh-product-slider improved (corrected flickering after arrow up/down is clicked)

--- a/saisonal/public/assets/scss/components/_fresh-products.scss
+++ b/saisonal/public/assets/scss/components/_fresh-products.scss
@@ -41,7 +41,7 @@ $changeTime: 750ms;
   article {
     position: relative;
     transition: all $changeTime ease;
-    padding: 15px 0;
+    padding: 60px 0;
 
     @media (min-width: $screen-sm-min) {
       opacity: 0.2;
@@ -57,6 +57,17 @@ $changeTime: 750ms;
     .hl-bg {
       text-decoration: none;
       cursor: pointer;
+    }
+
+    @media (min-width: $screen-md-min) {
+      .details {
+        opacity: 0;
+        transition: opacity 300ms ease;
+      }
+
+      &.active .details {
+        opacity: 1;
+      }
     }
   }
 }
